--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,4 @@ edition = "2018"
 
 [dev-dependencies]
 futures = "0.3"
-tokio = { version = "1.0", features = [ "full" ] }
+tokio = { version = "1.0", features = [ "rt-multi-thread", "time", "macros" ] }
